--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -7,12 +7,13 @@
 } */
 
 ion-content {
-    --ion-background-color: transparent;
+    --ion-background-color: none;
 }
 
 ion-content.background {
     position: relative;
     overflow: hidden;
+    background: #000;
 }
 
 ion-content.background:before {
@@ -24,7 +25,7 @@ ion-content.background:before {
     width: 100%;
     height: 100%;
     z-index: 1;
-    opacity: 0.3;
+    opacity: 0.15;
     background-image: url(/assets/man-standing-near-food-truck.jpg);
     background-repeat: no-repeat;
     background-position: 50% 0;
@@ -34,7 +35,7 @@ ion-content.background:before {
     -webkit-background-size: cover;
     background-size: cover;
     @media (min-width: 600px) {
-        width: 50%;
+        // width: 75%;
     }
 }
 
@@ -53,4 +54,56 @@ ion-content.main{
     h1 {
         margin-top: 10px;
     }
+}
+
+.demo-photo {
+    width: 275px;
+}
+
+.demo-container {
+    display: flex;
+    justify-content: center;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    ion-button {
+        padding: 0 5px 0 5px;
+        margin-top: 20px;
+    }
+}
+
+h2 {
+    margin-top: 10px;
+}
+
+.subtitle-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .logo-subtitle-container {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+    }
+    ion-text {
+        img {
+            width: 50px;
+            margin: 0 5px 0 10px;
+        }
+        flex-grow: 1;
+        h2 {
+            // width: 360px;
+        }
+        p {
+            width: 280px;
+            text-align: center;
+        }
+    }
+}
+
+.break {
+    flex-basis: 100%;
+    height: 0;
 }
