--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,11 +1,4 @@
-/* .page-container {
-    background-image: url("https://coreyhodge.net/assets/corey.png");
-  } */
-
-/* ion-content.background{
-    --background: url(/assets/logo/logo_1000.png) 0 0/100% 100% no-repeat;
-} */
-
+// Background image control
 ion-content {
     --ion-background-color: none;
 }
@@ -39,11 +32,12 @@ ion-content.background:before {
     }
 }
 
-// allows the page to float above the background for interaction
+// Allows the page to float above the background for interaction
 ion-content.main{
     z-index: 2;
 }
 
+// If Ion Header is enabled, this affects elements in the title container
 .title-container {
     display: flex;
     align-items: center;
@@ -56,28 +50,12 @@ ion-content.main{
     }
 }
 
-.demo-photo {
-    width: 275px;
-}
-
-.demo-container {
-    display: flex;
-    justify-content: center;
-}
-
-.buttons-container {
-    display: flex;
-    justify-content: center;
-    ion-button {
-        padding: 0 5px 0 5px;
-        margin-top: 20px;
-    }
-}
-
+// The header within Ion Content
 h2 {
     margin-top: 10px;
 }
 
+// The app name, logo, and description
 .subtitle-container {
     display: flex;
     flex-direction: column;
@@ -87,9 +65,16 @@ h2 {
         align-items: center;
         margin-top: 10px;
     }
+    // A flex element to force the subtitle and description onto separate flex rows
+    .break {
+        flex-basis: 100%;
+        height: 0;
+    }
+
     ion-text {
         img {
-            width: 50px;
+            width: 25px;
+            height: auto;
             margin: 0 5px 0 10px;
         }
         flex-grow: 1;
@@ -102,8 +87,31 @@ h2 {
         }
     }
 }
-
-.break {
-    flex-basis: 100%;
-    height: 0;
+ 
+// Photo with mockup photo
+.demo-container {
+    display: flex;
+    justify-content: center;
+    .demo-photo {
+        width: 275px;
+    }
+    @media(min-height: 700px) {
+        img {
+            margin-top: 20px;
+        }
+    }
 }
+
+// The Sign Up and Sign In buttons
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    ion-button {
+        padding: 0 5px 0 5px;
+        margin-top: 20px;
+        @media(min-height: 700px) {
+                margin-top: 40px;
+        }
+    }
+}
+
